# real-time-plotting-rs

./: Cargo.toml  README.md
src/: main.rs
